Image correction - Vulenrabilities scan activation

--- a/single-node/config/wazuh_cluster/wazuh_manager.conf
+++ b/single-node/config/wazuh_cluster/wazuh_manager.conf
@@ -96,14 +96,14 @@
   </sca>
 
   <vulnerability-detector>
-    <enabled>no</enabled>
+    <enabled>yes</enabled>
     <interval>5m</interval>
     <min_full_scan_interval>6h</min_full_scan_interval>
     <run_on_start>yes</run_on_start>
 
     <!-- Ubuntu OS vulnerabilities -->
     <provider name="canonical">
-      <enabled>no</enabled>
+      <enabled>yes</enabled>
       <os>trusty</os>
       <os>xenial</os>
       <os>bionic</os>
